--- a/index.html
+++ b/index.html
@@ -8,19 +8,9 @@
 
 <style>
 
-#toolbar {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 32px;
-
-color: #FFF; background-color: #111;
-}
-
 #swipo-wrapper {
 	position: absolute;
-	top: 32px;
+	top: 0;
 	left: 0;
 	bottom: 0;
 	right: 0;
@@ -31,6 +21,7 @@ color: #FFF; background-color: #111;
 .swipo-menu { color: #FFF; background-color: #333; }
 .swipo-more { color: #333; background-color: #FFF; }
 .swipo-main { color: #FFF; background-color: #8ba987; }
+.swipo-navbar { color: #FFF; background-color: #111; }
 .swipo-popup { color: #333; background-color: #EEE; }
 
 </style>
@@ -40,13 +31,12 @@ color: #FFF; background-color: #111;
 <body>
 
 <div id="wrapper">
-	<div id="toolbar">
-		<span><button onclick="$('#swipo').toggleClass('menu');">Menu</button></span>
-		<span style="float:right;"><button onclick="$('#swipo').toggleClass('more');">Friends</button></span>
-	</div>
-
 	<div id="swipo-wrapper">
 		<div id="swipo" class="swipo">
+			<div class="swipo-navbar">
+				<span><button onclick="$('#swipo').toggleClass('menu');">Menu</button></span>
+				<span style="float:right;"><button onclick="$('#swipo').toggleClass('more');">Friends</button></span>
+			</div>
 			<div class="swipo-pull">Zum Aktualisieren herunterziehen</div>
 			<div class="swipo-menu"><button onclick="$('#swipo').toggleClass('popup'); $('#settings').toggleClass('active');">Config</button></div>
 			<div class="swipo-main">Hallo, Welt</div>
