--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<h1>SwipoJS GitHub Page</h1>
+<!DOCTYPE html>
+
+<html>
+
+<head>
+	<title>SwipoJS</title>
+</head>
+
+<body>
+
+<center>
+	<h1>SwipoJS</h1>
+	<h2>GitHub Page</h2>
+</center>
+
+</body>
+
+</html>
+
