Improved drag behaviour

--- a/index.html
+++ b/index.html
@@ -32,11 +32,8 @@
 	box-shadow: 0 0 10px #000;
 }
 
-#menu, #friends {
+#menu, #social {
 	background-color: #445;
-}
-
-#friends {
 }
 	</style>
 </head>
@@ -48,15 +45,15 @@
 		<div id="menu" class="swipo-panel deck-left" data-toggle="swipo-deck-left">
 		</div>
 	
-		<div id="friends" class="swipo-panel deck-right" data-toggle="swipo-deck-right">
+		<div id="social" class="swipo-panel deck-right" data-toggle="swipo-deck-right">
 		</div>
 
 		<div id="main" class="swipo-panel has-navbar has-tabbar deck-center" data-toggle="swipo-deck-center">
 			<div class="swipo-pull">Drag to sync</div>
 			<div class="swipo-panel swipo-navbar">
 				<button class="pull-left clearfix" onclick="$('#maindeck').toggleClass('left');">Menu</button>
-				Title
-				<button class="pull-right clearfix" onclick="$('#maindeck').toggleClass('right');">Friends</button>
+				SwipoJS
+				<button class="pull-right clearfix" onclick="$('#maindeck').toggleClass('right');">Social</button>
 			</div>
 	
 			<div class="swipo-panel swipo-tabbar"></div>
