swipo-panel is no longer the mother of everything

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
 
 <div id="swipo-wrapper" class="swipo">
-	<div id="maindeck" class="swipo-panel swipo-paneldeck" data-toggle="swipo-deck">
+	<div id="maindeck" class="swipo-paneldeck" data-toggle="swipo-deck">
 		<div id="menu" class="swipo-panel deck-left" data-toggle="swipo-deck-left">
 		</div>
 	
@@ -50,13 +50,13 @@
 
 		<div id="main" class="swipo-panel has-navbar has-tabbar deck-center" data-toggle="swipo-deck-center">
 			<div class="swipo-pull">Drag to sync</div>
-			<div class="swipo-panel swipo-navbar">
+			<div class="swipo-navbar">
 				<button class="pull-left clearfix" onclick="$('#maindeck').toggleClass('left');">Menu</button>
 				SwipoJS
 				<button class="pull-right clearfix" onclick="$('#maindeck').toggleClass('right');">Social</button>
 			</div>
 	
-			<div class="swipo-panel swipo-tabbar"></div>
+			<div class="swipo-tabbar"></div>
 		</div>
 	</div>
 </div>
