--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 
+<html lang="en">
+
 <head>
+	<meta charset="utf-8">
+	<title>Swipo</title>
+	<meta name="description" content="SwipoJS - Frontend Framework for creating gesture-based, responsive Websites &amp; Web-Apps.">
+	<meta name="keywords" content="swipojs, swipo, mobile, frontend, framework, mobile, swipe, touch, responsive">
+	<meta name="author" content="Ronny Haase <ronhaase@gmail.com>">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<link rel="stylesheet" href="swipo.css">
 	<link rel="stylesheet" href="swipo-theme-default.css">
 
@@ -50,12 +60,16 @@
 
 		<div id="main" class="swipo-panel has-navbar has-tabbar deck-center" data-toggle="swipo-deck-center">
 			<div class="swipo-pull">Drag to sync</div>
+
 			<div class="swipo-navbar">
 				<button class="pull-left clearfix" onclick="$('#maindeck').toggleClass('left');">Menu</button>
-				SwipoJS
+				Swipo
 				<button class="pull-right clearfix" onclick="$('#maindeck').toggleClass('right');">Social</button>
 			</div>
-	
+
+			<h1>Swipo</h1>
+			<h2>Frontend Framework for creating hot shit.</h2>
+
 			<div class="swipo-tabbar"></div>
 		</div>
 	</div>
