W.I.P. Dragging toggled panels

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 			<div class="swipo-pull">Drag to sync</div>
 
 			<div class="swipo-navbar">
-				<button class="pull-left clearfix" onclick="$('#maindeck').toggleClass('left');">Menu</button>
+				<button class="pull-left clearfix" onclick="$('#maindeck').toggleClass('left-in');">Menu</button>
 				Swipo
-				<button class="pull-right clearfix" onclick="$('#maindeck').toggleClass('right');">Social</button>
+				<button class="pull-right clearfix" onclick="$('#maindeck').toggleClass('right-in');">Social</button>
 			</div>
 
 			<h1>Swipo</h1>
