--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 	</div>
 </div>
 
-<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/hammer.js/1.0.3/hammer.min.js"></script>
+<script src="js/vendor/jquery-1.9.1.min.js"></script>
+<script src="js/vendor/hammer-1.0.3.min.js"></script>
 <script src="swipo.js"></script>
 
 <body>
