Renamed swipo.js -> swipo.deck.js

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <body>
 
-<div id="swipo-wrapper" class="swipo">
+<div id="swipo-wrapper" class="swipo" data-toggle="swipo">
 	<div id="maindeck" class="swipo-paneldeck" data-toggle="swipo-deck">
 		<div id="menu" class="swipo-panel deck-left" data-toggle="swipo-deck-left">
 		</div>
@@ -77,7 +77,7 @@
 
 <script src="js/vendor/jquery-1.9.1.min.js"></script>
 <script src="js/vendor/hammer-1.0.3.min.js"></script>
-<script src="swipo.js"></script>
+<script src="swipo-deck.js"></script>
 
 <body>
 
