Some LESS work...

--- a/less/tests/deck.html
+++ b/less/tests/deck.html
@@ -3,12 +3,16 @@
 <html>
 
 <head>
-	<link rel="stylesheet/less" type="text/css" href="../swipo.less">
+	<link rel="stylesheet/less" type="text/css" href="../deck.less">
 
 	<script src="../../js/tests/vendor/less-1.3.3.min.js"></script>
 </head>
 
 <body>
+
+<script src="../../js/vendor/jquery-1.9.1.min.js"></script>
+<script src="../../js/swipo-deck.js"></script>
+
 </body>
 
 </html>
